--- a/day1/index.html
+++ b/day1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Quran Recitation - Qaru Abdul Sudais!</title>
+    <title>Quran Recitation - Qari Abdul Sudais!</title>
   </head>
   <body>
     <div class="keys">
