--- a/days2/index.html
+++ b/days2/index.html
@@ -73,8 +73,8 @@
         const hours = now.getHours();
 
         const secondsDegrees = ((seconds / 60) * 360) + 90;
-        const minsDegrees = ((mins / 60) * 360) + 90;
-        const hoursDegrees = ((hours / 12) * 360) + 90;        
+        const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
+        const hoursDegrees = ((hours / 12) * 360) + ((mins/60)*30) + 90;   
         
         secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
         minsHand.style.transform = `rotate(${minsDegrees}deg)`;
