--- a/day3/index.html
+++ b/day3/index.html
@@ -57,8 +57,8 @@
 
       function handleUpdate() {
         console.log(this.value);
-        const suffix = this.dataset.sizing || '';
-        document.documentElement.style.setProperty(`--${this.name}`, this.value+suffix)
+        const suffix = this.dataset.sizing || "";
+        document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
       }
 
       inputs.forEach((input) => input.addEventListener("change", handleUpdate));
