--- a/day8/index.html
+++ b/day8/index.html
@@ -17,7 +17,7 @@
       ctx.lineJoin = "round";
       ctx.lineCap = "round";
       ctx.lineWidth = 100;
-    //   ctx.globalCompositeOperation = "multiply";
+    //   ctx.globalCompositeOperation = "copy";
 
       let isDrawing = false;
       let lastX = 0;
