JavaScript 30 Days - Day 24

--- a/day23/index.html
+++ b/day23/index.html
@@ -23,8 +23,9 @@
       <label for="pitch">Pitch:</label>
       <input type="range" name="pitch" min="0" max="2" step="0.1" />
 
-      <textarea name="text">Bismillah Rahman Rahim 
-In the name of ALLAH, the Gracious, the Merciful.
+      <textarea name="text">
+Bismillah Rahman Rahim 
+        In the name of ALLAH, the Gracious, the Merciful.
         Praise be to ALLAH, Lord of the Worlds.
         The Most Gracious, the Most Merciful.
         Master of the Day of Judgment.
