--- a/day26/index.html
+++ b/day26/index.html
@@ -15,10 +15,9 @@
           <a href="">About Me</a>
           <div class="dropdown dropdown1">
             <div class="bio">
-              <img src="https://logo.clearbit.com/wesbos.com" alt="" />
+              <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFvEFlfFS5UXw/profile-displayphoto-shrink_100_100/0/1517666233497?e=1671667200&v=beta&t=sze9XFaIfBoa0FOM4iq9BeivFw5E2U1SYyNbxBLEaOA" alt="" />
               <p>
-                Wes Bos sure does love web development. He teaches things like JavaScript,
-                CSS and BBQ. Wait. BBQ isn't part of web development. It should be though!
+                Irfan loves to learn TypeScript, JavaScript, Python, AI and Blockchain. Work in reactjs and server side development.
               </p>
             </div>
           </div>
@@ -67,12 +66,12 @@
         <li>
           <a href="#">Other Links</a>
           <ul class="dropdown dropdown3">
-            <li><a class="button" href="http://twitter.com/wesbos">Twitter</a></li>
+            <li><a class="button" href="http://twitter.com/gurupak">Twitter</a></li>
             <li>
-              <a class="button" href="http://facebook.com/wesbos.developer">Facebook</a>
+              <a class="button" href="https://www.facebook.com/gurupak">Facebook</a>
             </li>
-            <li><a class="button" href="http://wesbos.com">Blog</a></li>
-            <li><a class="button" href="http://wesbos.com/courses">Course Catalog</a></li>
+            <li><a class="button" href="https://udemy.com">Blog</a></li>
+            <li><a class="button" href="https://udemy">Course Catalog</a></li>
           </ul>
         </li>
       </ul>
