--- a/day28/index.html
+++ b/day28/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <video src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" class="flex" width="765" height="430" loop controls></video>
+        <video src="Al-Ikhlas.mp4" class="flex" width="765" height="430" loop controls></video>
         <div class="speed">
             <div class="speed-bar">1x</div>
         </div>
