--- a/day30/index.html
+++ b/day30/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Wack A Mole</title>
+    <title>Whack A Mole</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
